--- a/index/index.html
+++ b/index/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,35 +36,37 @@
 
             </el-menu>
         </div>
+        <div class="carousel-wrap">
+            <div class="carousel">
+                <el-carousel type="card" height="336px">
+                    <el-carousel-item v-for="item in carousel_items" :key="item">
+                        <img class="carousel-img" v-bind:src="item.image_url" alt="" srcset="">
+                    </el-carousel-item>
+                </el-carousel>
+            </div>
+        </div>
+
         <!--<div class="tab" >-->
             <!--<div class="tab-item" v-for="item in tab_list">{{item}}</div>-->
         <!--</div>-->
         <div class="main">
             <div class="section">
-                <div class="carousel">
-                    <el-carousel >
-                        <el-carousel-item v-for="item in carousel_items" :key="item">
-                            <img class="carousel-img" v-bind:src="item.image_url" alt="" srcset="">
-                        </el-carousel-item>
-                    </el-carousel>
-                </div>
                 <div class="hot-playlist">
                     <div class="hot-playlist-title">
                         <h2>热门歌单</h2>
                     </div>
                     <div class="hot-playlist-content">
                         <div class="playlist-item" v-for="item in hot_playlist">
-                            <el-card body-style="padding:10px">
+                            <el-card body-style="padding:8px">
                                 <img v-bind:src="item.img_url" class="playlist-item-img">
                                 <div>
-                                    <span>{{item.title}}</span>
+                                    <div class="item-title">{{item.title}}</div>
                                     <div>
                                         <div class="item-time">{{item.create_date}}</div>
-                                        <div class="btn-list">
-                                            <el-button size="small" icon="el-icon-caret-right" circle></el-button>
-                                            <el-button size="small" icon="el-icon-star-off" circle></el-button>
-                                            <el-button size="small" icon="el-icon-info" circle></el-button>
-                                        </div>
+                                        <!--<div class="btn-list">-->
+                                            <!--<el-button size="small" icon="el-icon-caret-right" circle></el-button>-->
+                                            <!--<el-button size="small" icon="el-icon-star-off" circle></el-button>-->
+                                        <!--</div>-->
 
                                     </div>
                                 </div>
