开始专辑页面

--- a/playlistDetail/playlistDetail.html
+++ b/playlistDetail/playlistDetail.html
@@ -16,7 +16,48 @@
     <div id="app">
         <div class="main-wrap">
             <div class="main">
-                <div class="section">
+                <div class="section" v-if="isPlaylist">
+                    <el-card body-style="padding:6px" class="playlist-img-wrap">
+                        <img v-bind:src="playlist.img_url" class="playlist-img">
+                    </el-card>
+                    <div class="playlist-content">
+                        <div class="playlist-title">
+                            <img src="../img/playlistTag.png" style="width: 64px;height: 26px;" alt="">
+                            <div>{{playlist.title}} </div>
+                        </div>
+                        <div class="playlist-author">
+                            <img v-bind:src="playlist.author.img_url" alt="" class="playlist-author-img">
+                            <div class="playlist-author-name">
+                                {{playlist.author.name}}
+                                <i style="color: #eb7504;font-weight: bold;" class="el-icon-star-off"></i>
+                            </div>
+                            <div class="playlist-time">{{playlist.create_date}} 创建</div>
+                        </div>
+                        <div class="playlist-btn-wrap">
+                            <el-button type="primary" round icon="el-icon-caret-right">播放</el-button>
+                            <el-button  round icon="el-icon-service">{{playlist.play_count}}</el-button>
+                            <el-button  round icon="el-icon-star-off">{{playlist.collect_count}}</el-button>
+                            <el-button  round icon="el-icon-download">{{playlist.download_count}}</el-button>
+                        </div>
+                        <div class="playlist-tag">
+                            <div class="playlist-tag-title">
+                                标签：
+                            </div>
+                            <a href="" class="playlist-tag-item" v-for="tag in playlist.tags">
+                                {{tag}}
+                            </a>
+                        </div>
+                        <div class="playlist-info">
+                            <div class="playlist-info-title">
+                                介绍：
+                            </div>
+                            <pre-wrap class="playlist-info-content">
+                                {{playlist.introduction}}
+                            </pre-wrap>
+                        </div>
+                    </div>
+                </div>
+                <div class="section" v-else>
                     <el-card body-style="padding:6px" class="playlist-img-wrap">
                         <img v-bind:src="playlist.img_url" class="playlist-img">
                     </el-card>
@@ -60,17 +101,32 @@
                 <div class="songs">
                     <div class="songs-title">
                         <h3>
-                            <i class="el-icon-caret-right"></i> 
+                            <i class="el-icon-caret-bottom"></i>
                             歌曲列表
                             <span style="font-size: 12px;color: #666;font-weight: normal;margin-left: 20px">
-                                {{playlist.songs.length}}首歌
+                                {{songs.length}}首歌
                             </span>
                         </h3>
                     </div>
                     <el-table
-                            :data="playlist.songs"
+                            :data="songs"
                             stripe
                             style="width: 100%">
+                        <el-table-column
+                                type="index"
+                                width="40">
+                        </el-table-column>
+                        <el-table-column label="操作"
+                        width="100">
+                            <template slot-scope="scope">
+                                <el-button icon="el-icon-caret-right" size="mini" style="color: #c20c0c;" circle></el-button>
+                                <el-button icon="el-icon-plus" size="mini" style="color: #c20c0c;" circle></el-button>
+                            </template>
+                        </el-table-column>
+                        <el-table-column
+                                type=""
+                                width="50">
+                        </el-table-column>
                         <el-table-column
                                 prop="title"
                                 label="歌曲名"
@@ -79,12 +135,12 @@
                         <el-table-column
                                 prop="duration"
                                 label="时长"
-                                width="180">
+                                width="80">
                         </el-table-column>
                         <el-table-column
                                 prop="album"
                                 label="专辑"
-                                width="180">
+                                width="160">
                         </el-table-column>
                         <el-table-column
                                 prop="singer"
@@ -95,11 +151,69 @@
 
 
                 </div>
+                <div class="comment">
+                    <div class="songs-title">
+                        <h3>
+                            <i class="el-icon-caret-bottom"></i>
+                            评论
+                            <span style="font-size: 12px;color: #666;font-weight: normal;margin-left: 20px">
+                                {{comments.length}}条评论
+                            </span>
+                        </h3>
+                    </div>
+                    <div class="comment-body">
+                        <div class="comment-body-new">
+                            <img class="comment-user-icon" src="http://s4.music.126.net/style/web2/img/default/default_avatar.jpg?param=50y50" alt="">
+                            <div class="comment-input">
+                                <el-input
+                                        type="textarea"
+                                        :autosize="{ minRows: 2, maxRows: 4}"
+                                        placeholder="评论"
+                                        v-model="comment_textarea"
+                                        maxlength="120">
+                                </el-input>
+                                <div class="new-comment-btnlist">
+                                    <div class="new-comment-flag">
+                                        <i class="el-icon-location-outline" style="font-size: 16px"></i>
+                                        <i class="el-icon-picture-outline" style="font-size: 16px"></i>
+                                    </div>
+                                    <div class="new-comment-btn">
+                                        <span class="new-comment-len">
+                                            {{comment_textarea.length}} / 120
+                                        </span>
+                                        <el-button size="mini" type="primary" round>评论</el-button>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                        <div class="comment-body-content">
+                            <div class="comment-item" v-for="comment in comments">
+                                <div class="comment-img">
+                                    <img v-bind:src="comment.img_url" style="width: 50px;height: 50px;" alt="">
+                                </div>
+                                <div class="comment-info-wrap">
+                                    <div class="comment-user-name">{{comment.user_name}}：</div>
+                                    <div class="comment-content">{{comment.content}}</div>
+                                    <div class="comment-info">
+                                        <div class="comment-item-time">{{comment.create_date}}</div>
+                                        <div class="comment-item-likes"><i class="el-icon-view"></i> {{comment.likes}}</div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="aside">
 
             </div>
+        </div>
+        <div class="footer">
+            <div class="footer-link"> 加入我们 | 支持我们 | 客户服务 | 服务条款 | 网站导航 | 意见反馈 </div>
+            <div>©2018 带音乐平台</div>
         </div>
     </div>
 
