修改详情名字

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>playlistDetail</title>
+    <title>Detail</title>
     <!-- VUE -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <!-- 引入样式 -->
@@ -10,7 +10,7 @@
     <!-- 引入组件库 -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 
-    <link rel="stylesheet" href="./playlistDetail.css">
+    <link rel="stylesheet" href="detail.css">
 </head>
 <body>
     <div id="app">
@@ -228,6 +228,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./playlistDetail.js"></script>
+    <script type="text/javascript" src="detail.js"></script>
 </body>
 </html>
