--- a/searchResults/searchResults.html
+++ b/searchResults/searchResults.html
@@ -15,9 +15,157 @@
 </head>
 <body>
     <div id="app">
-        {{s}}
-    </div>
+        <div class="main">
+            <div class="s-wrap">
+                <el-input class="search"
+                          placeholder="搜索"
+                          prefix-icon="el-icon-search"
+                          v-model="search_wd"size="medium">
+                </el-input>
+            </div>
+            <div class="s-num">
+                搜索{{search_wd}},有{{tab_chooice}}
+            </div>
+            <div class="tab">
+                <el-tabs type="border-card" stretch @tab-click="tabClick">
+                    <el-tab-pane>
+                        <span slot="label"><i class="el-icon-caret-right"></i>  单曲</span>
+                        <el-table
+                                :data="songs"
+                                stripe
+                                style="width: 100%">
+                            <el-table-column
+                                    type="index"
+                                    width="40">
+                            </el-table-column>
+                            <el-table-column label="操作"
+                                             width="100">
+                                <template slot-scope="scope">
+                                    <el-button icon="el-icon-caret-right" size="mini" style="color: #c20c0c;" circle></el-button>
+                                    <el-button icon="el-icon-plus" size="mini" style="color: #c20c0c;" circle></el-button>
+                                </template>
+                            </el-table-column>
+                            <el-table-column
+                                    label="歌曲名"
+                                    width="180">
+                                <template slot-scope="scope">
+                                    <a href="#">{{scope.row.title}}</a>
+                                </template>
+                            </el-table-column>
+                            <el-table-column
+                                    prop="duration"
+                                    label="时长"
+                                    width="80">
+                            </el-table-column>
+                            <el-table-column
+                                    label="专辑"
+                                    width="160">
+                                <template slot-scope="scope">
+                                    <a href="#">{{scope.row.album}}</a>
+                                </template>
+                            </el-table-column>
+                            <el-table-column
+                                    label="歌手">
+                                <template slot-scope="scope">
+                                    <a href="#">{{scope.row.singer}}</a>
+                                </template>
+                            </el-table-column>
+                        </el-table>
+                    </el-tab-pane>
+                    <el-tab-pane label="专辑">
+                        <div class="s-albumlist">
+                            <div class="album-item" v-for="album in albumlist">
+                                <el-card :body-style="{ padding: '8px' }">
+                                    <img v-bind:src="album.img_url" style="height: 130px;width: 130px;">
+                                    <img src="../img/album.png" style="height: 130px;width: 23px;margin-left: -5px" alt="">
+                                    <div class="album-info">
+                                        <div class="album-an">
+                                            <a href="../detail/detail.html?type=album&id=1">{{fomatString(album.title,16)}}</a>
+                                        </div>
+                                        <div class="album-sn">
+                                            <a href="#">
+                                                {{fomatString(album.singer,16)}}
+                                            </a>
+                                        </div>
+                                    </div>
+                                </el-card>
+                            </div>
+                        </div>
+                    </el-tab-pane>
+                    <el-tab-pane label="歌单">
+                        <div class="s-playlists">
+                            <el-table
+                                    :data="playlists"
+                                    stripe
+                                    style="width: 100%">
+                                <el-table-column
+                                        type="index"
+                                        width="40">
+                                </el-table-column>
+                                <el-table-column label="操作"
+                                                 width="100">
+                                    <template slot-scope="scope">
+                                        <el-button icon="el-icon-caret-right" size="mini" style="color: #c20c0c;" circle></el-button>
+                                        <el-button icon="el-icon-plus" size="mini" style="color: #c20c0c;" circle></el-button>
+                                    </template>
+                                </el-table-column>
+                                <el-table-column
+                                        prop="title"
+                                        label="歌单名"
+                                        width="250">
+                                    <template slot-scope="scope">
+                                        <div class="playlist-title">
+                                            <img v-bind:src="scope.row.img_url" alt="" style="height: 50px;width: 50px;">
+                                            <a href="#">{{fomatString(scope.row.title,11)}}</a>
+                                        </div>
 
+                                    </template>
+                                </el-table-column>
+                                <el-table-column
+                                        prop="num"
+                                        label="歌曲数量"
+                                        width="100">
+                                </el-table-column>
+                                <el-table-column
+                                        prop="create_date"
+                                        label="创建时间"
+                                        width="180">
+                                </el-table-column>
+                                <el-table-column
+                                        prop="play_count"
+                                        label="收听量"
+                                        width="100">
+                                </el-table-column>
+                                <el-table-column
+                                        label="BY">
+                                    <template slot-scope="scope">
+                                        <a href="#">{{fomatString(scope.row.author.name,10)}}</a>
+                                    </template>
+                                </el-table-column>
+                            </el-table>
+                        </div>
+                    </el-tab-pane>
+                    <el-tab-pane label="歌词" >歌词搜索结果</el-tab-pane>
+                    <el-tab-pane label="用户">用户搜索结果</el-tab-pane>
+                    <div class="pagenation">
+                        <el-pagination
+                                background
+                                @current-change="handleCurrentChange"
+                                :current-page.sync="currentPage"
+                                :page-size="10"
+                                layout="prev, pager, next"
+                                :total="100">
+                        </el-pagination>
+                    </div>
+                </el-tabs>
+            </div>
+
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-link"> 加入我们 | 支持我们 | 客户服务 | 服务条款 | 网站导航 | 意见反馈 </div>
+        <div>©2018 带音乐平台</div>
+    </div>
     <script type="text/javascript" src="./searchResults.js"></script>
 </body>
 </html>
