--- a/index/index.html
+++ b/index/index.html
@@ -39,8 +39,25 @@
                               v-model="search_wd"size="medium">
                     </el-input>
                     <div class="log">
-                        <a href="#" @click="loginFormVisible = true">登录</a>
-                        <a href="#" @click="registerFormVisible = true">注册</a>
+                        <div class="user" v-if="user!=null">
+                            <img v-bind:src="user.img_url" style="height: 30px;width: 30px;border-radius: 15px;margin-right: 10px" alt="icon" >
+                            <el-dropdown @command="handleCommand">
+                                <span class="el-dropdown-link" style="color: #ffffff;">
+                                {{user.name}}<i class="el-icon-arrow-down el-icon--right"></i>
+                                </span>
+                                <el-dropdown-menu slot="dropdown">
+                                    <el-dropdown-item command="homepage">我的主页</el-dropdown-item>
+                                    <el-dropdown-item disabled>我的消息</el-dropdown-item>
+                                    <el-dropdown-item disabled>个人设置</el-dropdown-item>
+                                    <el-dropdown-item divided command="logout"><i class="el-icon-delete"></i> 登出 </el-dropdown-item>
+                                </el-dropdown-menu>
+                            </el-dropdown>
+                        </div>
+                        <div class="log-or-register" v-else>
+                            <a href="#" @click="loginFormVisible = true">登录</a>
+                            <a href="#" @click="registerFormVisible = true">注册</a>
+                        </div>
+
                     </div>
                 </div>
                 <!--login Form -->
@@ -65,7 +82,7 @@
                     </div>
                 </el-dialog>
                 <!--register Form -->
-                <el-dialog title="注册" :visible.sync="registerFormVisible" width="360px" >
+                <el-dialog title="注册" :visible.sync="registerFormVisible" width="360px" v-loading="true">
                     <el-form :model="register_form">
                         <el-form-item >
                             <el-input placeholder="账号" v-model="register_form.account" auto-complete="off" suffix-icon="el-icon-error"></el-input>
@@ -87,7 +104,7 @@
                         <div class="verification-code">
                             <a href="#">发送验证码</a>
                         </div>
-                        <el-button class="register-button" type="primary" @click="registerFormVisible = false">注册</el-button>
+                        <el-button class="register-button" type="primary" @click="register">注册</el-button>
                         <div>
                             <a href="#" class="to-login" @click="toRegisterORLogin('Login')">登录</a>
                         </div>
