--- a/detail/detail.html
+++ b/detail/detail.html
@@ -136,7 +136,7 @@
                                 label="专辑"
                                 width="160">
                             <template slot-scope="scope">
-                                <a href="#">{{scope.row.album}}</a>
+                                <a v-bind:href="'../detail/detail.html?type=album&id='+scope.row.album.id">{{scope.row.album.name}}</a>
                             </template>
                         </el-table-column>
                         <el-table-column
